<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/unsplash_picker_title_text_view"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/unsplash"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/unsplash_picker_back_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back"
        android:padding="8dp"
        android:src="@drawable/ic_arrow_back_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/unsplash_picker_title_text_view"
        app:layout_constraintLeft_toLeftOf="@+id/unsplash_picker_title_text_view"
        app:layout_constraintTop_toTopOf="@+id/unsplash_picker_title_text_view" />

    <ImageView
        android:id="@+id/unsplash_picker_cancel_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@android:string/cancel"
        android:padding="8dp"
        android:src="@drawable/ic_clear_24dp"
        app:tint="@android:color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/unsplash_picker_title_text_view"
        app:layout_constraintLeft_toLeftOf="@+id/unsplash_picker_title_text_view"
        app:layout_constraintTop_toTopOf="@+id/unsplash_picker_title_text_view" />

    <ImageView
        android:id="@+id/unsplash_picker_done_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/done"
        android:padding="8dp"
        android:src="@drawable/ic_done_24dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/unsplash_picker_title_text_view"
        app:layout_constraintRight_toRightOf="@+id/unsplash_picker_title_text_view"
        app:layout_constraintTop_toTopOf="@+id/unsplash_picker_title_text_view" />

    <EditText
        android:id="@+id/unsplash_picker_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/shape_rectangle_round_white"
        android:hint="@string/search"
        android:imeOptions="actionDone"
        android:lines="1"
        android:maxLines="1"
        android:padding="8dp"
        android:singleLine="true"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/unsplash_picker_title_text_view"
        app:layout_constraintLeft_toLeftOf="@+id/unsplash_picker_title_text_view"
        app:layout_constraintRight_toRightOf="@+id/unsplash_picker_title_text_view"
        app:layout_constraintTop_toTopOf="@+id/unsplash_picker_title_text_view" />

    <ImageView
        android:id="@+id/unsplash_picker_search_image_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/search"
        android:padding="6dp"
        android:src="@drawable/ic_search_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/unsplash_picker_title_text_view"
        app:layout_constraintRight_toRightOf="@+id/unsplash_picker_title_text_view"
        app:layout_constraintTop_toTopOf="@+id/unsplash_picker_title_text_view" />

    <ImageView
        android:id="@+id/unsplash_picker_clear_image_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/clear"
        android:padding="6dp"
        android:src="@drawable/ic_clear_24dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/unsplash_picker_edit_text"
        app:layout_constraintRight_toRightOf="@+id/unsplash_picker_edit_text"
        app:layout_constraintTop_toTopOf="@+id/unsplash_picker_edit_text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/unsplash_picker_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="4dp"
        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        app:spanCount="2"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unsplash_picker_title_text_view" />

    <TextView
        android:id="@+id/unsplash_picker_no_result_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_search_96dp"
        android:text="@string/no_result"
        android:textColor="@android:color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unsplash_picker_edit_text" />

    <LinearLayout
        android:id="@+id/unsplash_picker_progress_bar_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/pickerColorBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unsplash_picker_title_text_view">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
